--- a/docs/style.css
+++ b/docs/style.css
@@ -28,7 +28,7 @@
 }
 
 
-a[href="https://github.com/QuestNetwork/api"],a[href="https://github.com/QuestNetwork/security"],a[href="https://github.com/QuestNetwork/download"], a[href="https://github.com/QuestNetwork/support-us"], a[href="https://github.com/QuestNetwork/quickstart"], a[href="https://github.com/QuestNetwork/web-demo"],a[href="https://github.com/QuestNetwork/license"]{
+a[href="https://github.com/QuestNetwork/development"],a[href="https://github.com/QuestNetwork/api"],a[href="https://github.com/QuestNetwork/security"],a[href="https://github.com/QuestNetwork/download"], a[href="https://github.com/QuestNetwork/support-us"], a[href="https://github.com/QuestNetwork/quickstart"], a[href="https://github.com/QuestNetwork/web-demo"],a[href="https://github.com/QuestNetwork/license"]{
   display:none;
 }
 
