--- a/docs/style.css
+++ b/docs/style.css
@@ -41,8 +41,12 @@ a[href="https://github.com/QuestNetwork/animation"],a[href="https://github.com/Q
 }
 
 
-.gitter-open-chat-button{
-  display:none;
+.gitter-chat-embed-action-bar{
+  background: #232b4300;
+}
+
+.gitter-chat-embed{
+    z-index: 2222222;
 }
 
 .cover.show{
